--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ header {
 footer {
 
 }
+.probonocontainer{
+  /* background-size: contain;
+  background-image: url(/Assets/pattern.png);
+  background-position: top left;
+  background-repeat: repeat;
+   */
+
+   
+}
+
 
 /******************************************
 /* ADDITIONAL STYLES
