--- a/css/input.css
+++ b/css/input.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "reset.css";
+
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap"); */
+
 /* Box Model Hack */
 * {
   box-sizing: border-box;
@@ -5,16 +13,16 @@
 
 /* Clear fix hack */
 .clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 /******************************************
@@ -22,30 +30,23 @@
 /*******************************************/
 
 body {
-
 }
-
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 header {
-
 }
 
 footer {
-
 }
-.probonocontainer{
+.probonocontainer {
   /* background-size: contain;
   background-image: url(/Assets/pattern.png);
   background-position: top left;
   background-repeat: repeat;
    */
-
-   
 }
-
 
 /******************************************
 /* ADDITIONAL STYLES
